generacion de reportes
implementacion de generacion de reportes,  estatus de la encuesta en curso, empleados que han contestado la encuesta y validacion de realizacion de la encuesta

--- a/src/views/PAT-035/reportes.hbs
+++ b/src/views/PAT-035/reportes.hbs
@@ -219,51 +219,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8.8" >
-                        <div class="card">
-                            <div class="card-header d-flex justify-content-between align-items-center">
-                                <h4 class="header-title">Encuesta del Empleado</h4>
-                                <div>
-                                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                        <option selected="">Todos</option>
-                                        <option value="1">10/01/2023</option>
-                                        <option value="2">10/06/2023</option>
-                                    </select>
-                                </div>
-                                
-                            </div> 
-                            <div class="card-body pt-2">
-                                <div class="table-responsive" style="overflow-x: auto; max-height: 700px;">
-                                    <table class="table table-centered table-nowrap mb-0">
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">Fecha</th>
-                                                <th scope="col">Nombre</th>
-                                                <th scope="col" class="text-end">Acción</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>
-                                                    <div class="d-flex align-items-center">
-                                                        
-                                                        <div class="flex-grow-1 ms-2">
-                                                            10/01/2023
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                                <td>Alberto Díal Altamirano</td>
-                                                
-                                        
-                                                <td class="text-end">
-                                                    <a href="javascript:void(0);" class="font-18 text-info me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Mostrar"><i class="uil uil-eye"></i></a>
-                                                    <a href="javascript:void(0);" class="font-18 text-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="uil uil-trash"></i></a>
-                                                </td>
-                                            </tr> <!-- end tr -->        
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
+                        
                         <div class="card">
                             <div class="card-header d-flex justify-content-between align-items-center">
                                 <h4 class="header-title">Reporte de la Encuesta</h4>
@@ -282,52 +238,41 @@
                                         <thead>
                                             <tr>
                                                 <th scope="col">Fecha</th>
-                                                <th scope="col">Nombre</th>
+                                                <th scope="col"></th>
                                                 <th scope="col" class="text-end">Acción</th>
                                             </tr>
                                         </thead>
                                         <tbody>
+                                            {{#each reporteRespuestas}}
                                             <tr>
                                                 <td>
                                                     <div class="d-flex align-items-center">
                                                         
                                                         <div class="flex-grow-1 ms-2">
-                                                            10/01/2023
+                                                            {{fecha}}
                                                         </div>
                                                     </div>
                                                 </td>
-                                                <td>Alberto Díal Altamirano</td>
+                                                <td></td>
                                                 
                                         
                                                 <td class="text-end">
-                                                    <a href="javascript:void(0);" class="font-18 text-info me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Mostrar"><i class="uil uil-eye"></i></a>
-                                                    <a href="javascript:void(0);" class="font-18 text-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="uil uil-trash"></i></a>
+                                                    <a href="/PAT-035/verEncuesta/{{idEncuesta}}/{{idEmpleado}}" target="_blank" class="font-18 text-info me-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Generar Reporte"><i class=""></i>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filetype-pdf" viewBox="0 0 16 16">
+                                                                <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2h-1v-1h1a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5L14 4.5ZM1.6 11.85H0v3.999h.791v-1.342h.803c.287 0 .531-.057.732-.173.203-.117.358-.275.463-.474a1.42 1.42 0 0 0 .161-.677c0-.25-.053-.476-.158-.677a1.176 1.176 0 0 0-.46-.477c-.2-.12-.443-.179-.732-.179Zm.545 1.333a.795.795 0 0 1-.085.38.574.574 0 0 1-.238.241.794.794 0 0 1-.375.082H.788V12.48h.66c.218 0 .389.06.512.181.123.122.185.296.185.522Zm1.217-1.333v3.999h1.46c.401 0 .734-.08.998-.237a1.45 1.45 0 0 0 .595-.689c.13-.3.196-.662.196-1.084 0-.42-.065-.778-.196-1.075a1.426 1.426 0 0 0-.589-.68c-.264-.156-.599-.234-1.005-.234H3.362Zm.791.645h.563c.248 0 .45.05.609.152a.89.89 0 0 1 .354.454c.079.201.118.452.118.753a2.3 2.3 0 0 1-.068.592 1.14 1.14 0 0 1-.196.422.8.8 0 0 1-.334.252 1.298 1.298 0 0 1-.483.082h-.563v-2.707Zm3.743 1.763v1.591h-.79V11.85h2.548v.653H7.896v1.117h1.606v.638H7.896Z"/>
+                                                                </svg>
+                                                    </a>
+                                                    
                                                 </td>
-                                            </tr> <!-- end tr -->        
+                                            </tr> <!-- end tr -->   
+
+                                            {{/each}}
                                         </tbody>
                                     </table>
                                 </div>
                             </div>
                         </div>
-                        <div class="row col-6.6 order-lg-1">
-                            <div class="card">
-                                <h4 class="header-title">Estadística del Hotel</h4>
-                                <div class="card-body pt-0">
-                                    <div id="average-sales" class="apex-charts mb-4 mt-2"
-                                        data-colors="#727cf5,#fa5c7c"></div>
-                                    
-
-                                    <div class="chart-widget-list">
-                                        <p>
-                                            <i class="mdi mdi-square text-primary"></i> Afectado
-                                        </p>
-                                        <p>
-                                            <i class="mdi mdi-square text-danger"></i> No Afectado                                           
-                                        </p>
-                                    </div>
-                                </div> <!-- end card-body-->
-                            </div> <!-- end card-->
-                        </div> <!-- end col-->
+                        
                     </div>
                 </div>
 
