Estadisticas globales corregido

--- a/src/views/PAT-035/estadisticasGlobales.hbs
+++ b/src/views/PAT-035/estadisticasGlobales.hbs
@@ -262,14 +262,7 @@
                         </div>
                         <div class="card">
                             <img src=" /images/Hoteles/Hotel.jpg" class="img-fluid card-img">
-                            <div class="collapse" id="Una-estrella">
-                                <img src=" /images/Hoteles/Hotel4.png" class="img-fluid card-img">
-                            </div>
-
-                            <div class="collapse" id="Cuatro-estrellas">
-                                <img src=" /images/Hoteles/Hotel4.png" class="img-fluid card-img">
-                            </div>
-                            
+                            <img src=" /images/Hoteles/Hotel1.jpg" class="img-fluid card-img">
                             <!-- Una estrella -->
                             <div class="collapse card-img-overlay" id="Una-estrella">
                                 <div class="row">
@@ -311,6 +304,46 @@
                             </div>
                             <!-- Una estrella -->
 
+                            <!-- Tres estrellas -->
+                            <div class="collapse card-img-overlay" id="Tres-estrellas">
+                                <div class="row">
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <div id="Dañopsicosocial3" style="width: 200px; height: 215px;" class="justify-content-center"></div>
+                                        </div> <!-- end card-->    
+                                    </div>
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <img src=" /images/Hoteles/RP.png" class="height: 10 img-fluid">
+                                        </div> <!-- end card-->    
+                                    </div>    
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <div id="Acontecimientotraumaticosevero3" style="width: 200px; height: 200px;" class="justify-content-center"></div>
+                                        </div> <!-- end card-->    
+                                    </div>
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <img src=" /images/Hoteles/ATS.jpg" class="height: 10 img-fluid">
+                                        </div> <!-- end card-->    
+                                    </div>    
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <div id="Entornoorganizacional3" style="width: 200px; height: 200px;" class="justify-content-center"></div>
+                                        </div> <!-- end card-->    
+                                    </div>
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <img src=" /images/Hoteles/EO.jpg" class="height: 10 img-fluid">
+                                        </div> <!-- end card-->    
+                                    </div>    
+                                </div>
+                            </div>
+                            <!-- Tres estrellas -->
                             <!-- Cuatro estrellas -->
                             <div class="collapse card-img-overlay" id="Cuatro-estrellas">
                                 <div class="row">
@@ -351,7 +384,46 @@
                                 </div>
                             </div>
                             <!-- Cuatro estrellas -->
-
+                            <!-- Cinco estrellas -->
+                            <div class="collapse card-img-overlay" id="Cinco-estrellas">
+                                <div class="row">
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <div id="Dañopsicosocial5" style="width: 200px; height: 215px;" class="justify-content-center"></div>
+                                        </div> <!-- end card-->    
+                                    </div>
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <img src=" /images/Hoteles/RP.png" class="height: 10 img-fluid">
+                                        </div> <!-- end card-->    
+                                    </div>    
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <div id="Acontecimientotraumaticosevero5" style="width: 200px; height: 200px;" class="justify-content-center"></div>
+                                        </div> <!-- end card-->    
+                                    </div>
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <img src=" /images/Hoteles/ATS.jpg" class="height: 10 img-fluid">
+                                        </div> <!-- end card-->    
+                                    </div>    
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <div id="Entornoorganizacional5" style="width: 200px; height: 200px;" class="justify-content-center"></div>
+                                        </div> <!-- end card-->    
+                                    </div>
+                                    <div class="col-6 order-lg-1">
+                                        <div class="card">
+                                            <img src=" /images/Hoteles/EO.jpg" class="height: 10 img-fluid">
+                                        </div> <!-- end card-->    
+                                    </div>    
+                                </div>
+                            </div>
+                            <!-- Cinco estrellas -->
                         </div>
                     </div>
                     <!-- container -->
