--- a/src/views/PAT-035/home.hbs
+++ b/src/views/PAT-035/home.hbs
@@ -429,11 +429,11 @@
                                         <canvas id="grafica13"></canvas>
                                         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                                         <script>
-                                            const nuloOdespreciable3 = {{general.Nuloodespreciable}};
-                                            const bajo3 = {{general.Bajo}};
-                                            const medio3 = {{general.Medio}};
-                                            const alto3 = {{general.Alto}};
-                                            const muyAlto3 = {{general.Muyalto}};
+                                            const nuloOdespreciable3 = {{cat3.Nuloodespreciable}};
+                                            const bajo3 = {{cat3.Bajo}};
+                                            const medio3 = {{cat3.Medio}};
+                                            const alto3 = {{cat3.Alto}};
+                                            const muyAlto3 = {{cat3.Muyalto}};
                                             const data3 = {
                                                 labels: ['Nulo o despreciable', 'Bajo', 'Medio', 'Alto', 'Muy alto'],
                                                 datasets: [
@@ -471,11 +471,11 @@
                                          <canvas id="grafica14"></canvas>
                                         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
                                         <script>
-                                            const nuloOdespreciable4 = {{general.Nuloodespreciable}};
-                                            const bajo4= {{general.Bajo}};
-                                            const medio4 = {{general.Medio}};
-                                            const alto4= {{general.Alto}};
-                                            const muyAlto4= {{general.Muyalto}};
+                                            const nuloOdespreciable4 = {{cat4.Nuloodespreciable}};
+                                            const bajo4= {{cat4.Bajo}};
+                                            const medio4 = {{cat4.Medio}};
+                                            const alto4= {{cat4.Alto}};
+                                            const muyAlto4= {{cat4.Muyalto}};
                                             const data4 = {
                                                 labels: ['Nulo o despreciable', 'Bajo', 'Medio', 'Alto', 'Muy alto'],
                                                 datasets: [
