--- a/src/views/PAT-035/home.hbs
+++ b/src/views/PAT-035/home.hbs
@@ -234,7 +234,7 @@
                                             </a>
                                         </form>
                                     </div>
-                                    <h4 class="page-title">Dashboard</h4>
+                                    <h4 class="page-title">Tablero de Estadísticas</h4>
                                 </div>
                             </div>
                         </div>
