--- a/src/views/PAT-035/estadisticasGlobales.hbs
+++ b/src/views/PAT-035/estadisticasGlobales.hbs
@@ -255,9 +255,21 @@
                                                 <i class="ri-star-line font-16 text-warning"></i>
                                                 <i class="ri-star-line font-16 text-warning"></i>
                                             </a>
-                                        </li>
+                                        </li>                                       
+                                        <div class="btn-group" role="group">
+                                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Filtrar resultados...
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                            <li><a href="/PAT-035/estadisticasGlobales" class="dropdown-item">Todos los años</a></li>
+                                            <li><a href="/PAT-035/estadisticasGlobales-2023" class="dropdown-item">2023</a></li>
+                                            <li><a href="/PAT-035/estadisticasGlobales-2024" class="dropdown-item">2024</a></li>
+                                            <li><a href="/PAT-035/estadisticasGlobales-2025" class="dropdown-item">2025</a></li>
+                                            <li><a href="/PAT-035/estadisticasGlobales-2026" class="dropdown-item">2026</a></li>
+                                            </ul>
+                                        </div> 
                                     </ul>
-                                </nav>                                   
+                                </nav>                                
                             </div>
                         </div>
                         <div class="card">
