--- a/src/views/PAT-035/home.hbs
+++ b/src/views/PAT-035/home.hbs
@@ -219,20 +219,18 @@
                             <div class="col-12">
                                 <div class="page-title-box">                                    
                                     <div class="page-title-right">
-                                        <form class="d-flex">
-                                            <div class="input-group">
-                                                <input type="text" class="form-control form-control-light" id="dash-daterange">
-                                                <span class="input-group-text bg-primary border-primary text-white">
-                                                    <i class="mdi mdi-calendar-range font-13"></i>
-                                                </span>
-                                            </div>
-                                            <a href="javascript: void(0);" class="btn btn-primary ms-2">
-                                                <i class="mdi mdi-autorenew"></i>
-                                            </a>
-                                            <a href="javascript: void(0);" class="btn btn-primary ms-1">
-                                                <i class="mdi mdi-filter-variant"></i>
-                                            </a>
-                                        </form>
+                                        <div class="btn-group" role="group">
+                                            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Filtrar resultados...
+                                            </button>
+                                            <ul class="dropdown-menu">
+                                            <li><a href="/PAT-035/home" class="dropdown-item">Todos los años</a></li>
+                                            <li><a href="/PAT-035/home-2023" class="dropdown-item">2023</a></li>
+                                            <li><a href="/PAT-035/home-2024" class="dropdown-item">2024</a></li>
+                                            <li><a href="/PAT-035/home-2025" class="dropdown-item">2025</a></li>
+                                            <li><a href="/PAT-035/home-2026" class="dropdown-item">2026</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
                                     <h4 class="page-title">Tablero de Estadísticas</h4>
                                 </div>
