--- a/src/views/PAT-035/reportes.hbs
+++ b/src/views/PAT-035/reportes.hbs
@@ -223,12 +223,17 @@
                         <div class="card">
                             <div class="card-header d-flex justify-content-between align-items-center">
                                 <h4 class="header-title">Reporte de la Encuesta</h4>
-                                <div>
-                                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                        <option selected="">Todos</option>
-                                        <option value="1">10/01/2023</option>
-                                        <option value="2">10/06/2023</option>
-                                    </select>
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Filtrar resultados...
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                    <li><a href="/PAT-035/reportes" class="dropdown-item">Todos los años</a></li>
+                                    <li><a href="/PAT-035/reportes-2023" class="dropdown-item">2023</a></li>
+                                    <li><a href="/PAT-035/reportes-2024" class="dropdown-item">2024</a></li>
+                                    <li><a href="/PAT-035/reportes-2025" class="dropdown-item">2025</a></li>
+                                    <li><a href="/PAT-035/reportes-2026" class="dropdown-item">2026</a></li>
+                                    </ul>
                                 </div>
                                 
                             </div> 
