--- a/src/views/PAT-035/administrador.hbs
+++ b/src/views/PAT-035/administrador.hbs
@@ -265,7 +265,7 @@
                                     <div class="card-body">
                                         <div class="row mb-2">
                                             <div class="col-sm-5">
-                                                <a href="javascript:void(0);" class="btn btn-danger mb-2"><i class="mdi mdi-plus-circle me-2"></i> Agregar Hotel</a>
+                                                <a href="/PAT-035/addHotelAdmin" class="btn btn-danger mb-2"><i class="mdi mdi-plus-circle me-2"></i> Agregar Hotel</a>
                                             </div>
                                             <div class="col-sm-7">
                                                 <div class="text-sm-end">
